// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/github getDependency returns cleaned tags 1`] = `
Object {
  "repositoryUrl": "https://github.com/some/dep",
  "versions": Object {
    "1.0.0": Object {
      "gitRef": "1.0.0",
    },
    "1.1.0": Object {
      "gitRef": "v1.1.0",
    },
  },
}
`;

exports[`datasource/github getDependency returns releases 1`] = `
Object {
  "repositoryUrl": "https://github.com/some/dep",
  "versions": Object {
    "1.0.0": Object {
      "gitRef": "1.0.0",
    },
    "v1.1.0": Object {
      "gitRef": "v1.1.0",
    },
  },
}
`;
